--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -11,3 +11,11 @@ RUN apt-key add microsoft.asc
 
 RUN apt-get update \
     && apt-get -y install apt-transport-https azure-cli
+
+ENV GO_VERSION 1.11.1
+
+RUN wget https://dl.google.com/go/go${GO_VERSION}.linux-amd64.tar.gz
+
+RUN tar -C /usr/local -xzf go${GO_VERSION}.linux-amd64.tar.gz
+
+ENV PATH "${PATH}:/usr/local/go/bin"
