specify ports to allow in NSG (network security group)

--- a/docs/examples/oe-lnx-passwd.json
+++ b/docs/examples/oe-lnx-passwd.json
@@ -4,7 +4,8 @@
       {
         "name": "acclnx",
         "osType": "Linux",
-        "vmSize": "Standard_DC2s"
+        "vmSize": "Standard_DC2s",
+        "ports": [22]
       }
     ],
     "linuxProfile": {
